--- a/src/resource/views/search.handlebars
+++ b/src/resource/views/search.handlebars
@@ -4,6 +4,14 @@
     <label for="search-input">Từ Khóa </label>
     <input type="text" name="q" class="form-control" id="exampleInputEmail1" placeholder="Nhập từ khóa ...">
   </div>
+  <div class="form-group">
+    <label for="gender-input" class="gender-input">Từ khóa </label>
+    <select name="gender" id="gender-input " class="form-control">
+      <option value="">--Chon gioi tinh--</option>
+      <option value="male">Nam</option>
+      <option value="female">Nu</option>
+    </select>
+  </div>
   <button type="submit" class="btn btn-primary">Tìm kiếm </button>
 </form>
 </div>
