--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -14,3 +14,13 @@ h4{
     bottom: 0;
     left: 0;
 }
+.card-course-item{
+    margin-top: 16px;
+}
+.card-img-top{
+    width: 100px;
+    height: 100%;
+}
+.card-list{
+    width: 150px;
+}
