--- a/src/resource/views/home.handlebars
+++ b/src/resource/views/home.handlebars
@@ -1,1 +1,17 @@
-<h1>Home Page</h1>
+<div class="mt-4">
+    <div class="row">
+
+        {{#each course}}
+        <div class="col-sm-6 col-lg-4 card-list">
+            <div class="card card-course-item">
+                <img class="card-img-top" src="{{this.img}}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">{{this.test}}</h5>
+                    <p class="card-text">{{this.name}}</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
